# QKey

./: BasicUI.h  Makefile  PasswordDB.h  QKey.ino  Readme.md  huff.h  instructions.md
huff/: Makefile  huff.h  main.c
libraries/AtomicFile/: AtomicFile.cpp  AtomicFile.h
test/: CMakeLists.txt  Makefile  Readme.md  demo.db  demo.txt  extract.cpp  gen.py  spritz_stub.hpp  test_huff.c
